Replaced Discord token with placeholder
Token has since been refreshed so the original will not connect either.

--- a/RanseiBeta/Properties/launchSettings.json
+++ b/RanseiBeta/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "RanseiBeta": {
       "commandName": "Project",
       "environmentVariables": {
-        "DiscordToken": "NjU2NDkwNzU3NTg2NDE5NzIy.Xfjdyw.s63HqW2L17TgwblZnQVxZiO4LHY"
+        "DiscordToken": "<placeholder>"
       }
     }
   }
